[tool.poetry]
name = "nbo"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"